--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  calculator:
+  calauloter:
     build:
-      context: ./JavaWebCalculator
+      context: ./Calculoter
     container_name: calculoter
     ports:
       - "8081:8080"
 
   profile:
     build:
-      context: ./vprofile-project
+      context: ./profile
     container_name: name
     ports:
       - "8082:8080"  # Assuming vprofile exposes 8080 internally
