--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.8'
 
 services:
-  calauloter:
+  calculator:
     build:
-      context: ./Calculoter
-    container_name: calculoter
+      context: ./Calculator
+    container_name: calculotr
     ports:
       - "8081:8080"
 
@@ -15,7 +15,7 @@ services:
     ports:
       - "8082:8080"  # Assuming vprofile exposes 8080 internally
 
-  petstor:
+  petstore:
    build:
      context: ./jpetstore-6
     container_name: petstor
